--- a/README.adoc
+++ b/README.adoc
@@ -9,48 +9,48 @@ JUnit5가 세상에 모습을 드러내놓은지는 제법 됐다. 새로운 프
 
 [source,groovy]
 ----
-buildscript {
-    ext {
-        springBootVersion = '2.0.6.RELEASE'
-    }
-    repositories {
-        mavenCentral()
-    }
-    dependencies {
-        classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-    }
+plugins {
+    id 'org.springframework.boot' version '2.1.6.RELEASE'
+    id 'java'
 }
 
-apply plugin: 'java'
-apply plugin: 'eclipse'
-apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
 
-group = 'io.honeymon.study'
+
+group = 'io.honeymon.boot'
 version = '0.0.1-SNAPSHOT'
-sourceCompatibility = 10
+sourceCompatibility = '1.8'
+
+configurations {
+    developmentOnly
+    runtimeClasspath {
+        extendsFrom developmentOnly
+    }
+    compileOnly {
+        extendsFrom annotationProcessor
+    }
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    implementation('org.springframework.boot:spring-boot-starter-data-jpa')
-    implementation('org.springframework.boot:spring-boot-starter-web')
+    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+    compileOnly 'org.projectlombok:lombok'
 
-    runtimeOnly('com.h2database:h2')
-    compileOnly('org.projectlombok:lombok')
+    developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
-    testImplementation('org.springframework.boot:spring-boot-starter-test') {
-        exclude module: 'junit'
-    }
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
-    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
-}
+    runtimeOnly 'com.h2database:h2'
 
-test {
-    useJUnitPlatform()
+    annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+    annotationProcessor 'org.projectlombok:lombok'
+
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.security:spring-security-test'
 }
 ----
 
@@ -85,9 +85,9 @@ testImplementation('org.springframework.boot:spring-boot-starter-test') {
 ----
 dependencies {
     // 생략
-    testImplementation('org.junit.jupiter:junit-jupiter-api:5.2.0')
-    testCompile('org.junit.jupiter:junit-jupiter-params:5.2.0')
-    testRuntime('org.junit.jupiter:junit-jupiter-engine:5.2.0')
+    testImplementation('org.junit.jupiter:junit-jupiter-api')
+    testCompile('org.junit.jupiter:junit-jupiter-params')
+    testRuntime('org.junit.jupiter:junit-jupiter-engine')
     // 생략
 }
 ----
@@ -140,11 +140,50 @@ JUnit 5 = JUnit Platform + JUnit Jupiter + JUnit Vintage
 
 [NOTE]
 ====
-junit5는 람다를 기반으로 한 선언(assertion)을 지원한다. junit4에서 지원했던 기능이 부족하여 assertJ 의존성을 추가해야 했던 불편함을 해소할 수 있다.
+JUnit5는 람다를 기반으로 한 단언(assertion)을 지원한다. junit4에서 지원했던 기능이 부족하여 assertJ 의존성을 추가해야 했던 불편함을 해소할 수 있다.
 ====
 
 == Spock 실행환경 구성
-// 작성예정
+`build.gradle` 파일 내에 Spock 에 대한 의존성을 추가한다.
+
+[source]
+----
+dependencies {
+    // 코드 생략
+    testImplementation("org.codehaus.groovy:groovy-test")
+    testImplementation("org.spockframework:spock-core:1.3-groovy-2.5")
+    testImplementation("org.spockframework:spock-spring:1.3-groovy-2.5")
+}
+----
+
+Spock(현재 1.3, 2019/08)은 JUnit4(JUnit Vintage) 엔진에서 실행된다. link:https://github.com/spockframework/spock#latest-versions[Spock 2.0]부터 JUnit5 를 지원할 것으로 보인다.
+
+[NOTE]
+====
+Spock 1.3 is the last planned release for 1.x based on JUnit 4. Spock 2.0 will be based on the JUnit 5 Platform and require Java 8/groovy-2.5
+====
+
+IntelliJ(2019.2)에서 Spock 을 실행하려면 그레이들 설정을 확인해야 한다.
+
+image::./.imgs/project-test-intellij.png[]
+
+그림에서 보는 것과 같이 'Run tests using' 항목은 'IntelliJ'를 선택한다.
+
+image::./.imgs/project-test-intellij2.png[]
+
+테스트 실행을 위해 'Gradle'을 선택하면 다음과 같은 화면을 보게 된다.
+
+[source]
+----
+FAILURE: Build failed with an exception.
+* What went wrong:
+Execution failed for task ':test'.
+> No tests found for given includes: [io.honeymon.study.spock.LocalDateTimeSpec.setup](filter.includeTestsMatching)
+----
+
+image::./.imgs/project-test-gradle-test-not-found.png[]
+
+그레이들 테스트가 실행될 때 JUnit4 로 실행해야 하는데, `build.gradle` 스크립트에 선언한 `useJUnitPlatform()` 으로 JUnit5 가 실행되면서 Spock을 찾지 못하는 것으로 보인다. 반대로 `useJUnitPlatform()` 설정을 제거하면 JUnit5 에 맞춰 작성한 테스트가 실행되지 않는다.
 
 == 참고문서
 * link:https://docs.gradle.org/current/userguide/managing_transitive_dependencies.html[Managing Transitive Dependencies - Gradle]
