--- a/README.adoc
+++ b/README.adoc
@@ -185,6 +185,11 @@ image::./.imgs/project-test-gradle-test-not-found.png[]
 
 그레이들 테스트가 실행될 때 JUnit4 로 실행해야 하는데, `build.gradle` 스크립트에 선언한 `useJUnitPlatform()` 으로 JUnit5 가 실행되면서 Spock을 찾지 못하는 것으로 보인다. 반대로 `useJUnitPlatform()` 설정을 제거하면 JUnit5 에 맞춰 작성한 테스트가 실행되지 않는다.
 
+[NOTE]
+====
+Spock 2.0 이 나오기 전까지, JUnit5 를 실행해야하는 경우에는 Spock(~1.3) 은 빌드 테스트로 실행할 수 없다. ㅠㅅ-)
+====
+
 == 참고문서
 * link:https://docs.gradle.org/current/userguide/managing_transitive_dependencies.html[Managing Transitive Dependencies - Gradle]
 * link:https://junit.org/junit5/[JUnit5]
